<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/hintName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/hintDate"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:lines="1"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutName"
            tools:layout_editor_absoluteX="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/tituloMail"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutDate"
        >

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="0dp"
        android:maxLines="1"
        android:lines="1"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/tituloTel"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutMail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1"
            tools:layout_editor_absoluteX="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hintDesc"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutTel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="111dp"
        android:theme="@style/RaisedBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>